# Tox21-Multitask

./: .gitignore  README.md  README.rst  Updateable_Install.md  instructions.txt  pyproject.toml  setup.py
data/: fp.py
data_clean/: Clean_Tox_Data.csv  clean.py  fp.py  log.md  log.rst
data_clean/fingerprint_analysis/: analyze_fps.py
results/: run.py  testing_run.py
study/: study_create_model.py  study_dataloader.py  study_interface.py  study_testset.py  study_tuner.py
study/testcheck/: testcheck.txt
tests/: test_data_loader.py  test_interface.py  test_tox21_liver_predictor.py  vimtrics.txt
tox21_models/: interface.py  interface_binary.py  interface_binary_multi.py  model_reports.py
tox21_models/UMAP/: UMAP_runner.py  parameter_tuning_umapper.py  run_UMAP.py
tox21_models/UMAP/poetry_UMAP/: pyproject.toml
tox21_models/UMAP/poetry_UMAP/tests/: test_umap_poetry.py
tox21_models/data/: Clean_Tox_Data.csv  HEP_Liver_clean_data.csv
tox21_models/forest_model/: Forest.py  barchart_rdkit  forest_add_prop_code.py  report_forest_model.py  run_forest.py
tox21_models/utils/: '  create_model.py  create_model_multi.py  data_loader.py  label_binarizer.pkl  model.py  models.py  models_multi.py  tuner.py  tuner_multi.py
