[tool.poetry]
name = "tox21_models"
version = "0.1.0"
description = ""
authors = ["jdkern11 <leolion29@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8.0"
pgfingerprinting = {git = "ssh://git@github.com/Ramprasad-Group/pgfingerprinting.git", rev = "main"}
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
tensorflow = ">=2.4.1,<2.5"
tensorflow-addons = "^0.12.1"
kerastuner-tensorboard-logger = "^0.2.3"
keras-tuner = "^1.0.2"
pyarrow = "^4.0.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
