[tool.poetry]
name = "UMAP_poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "^1.17.0"
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
pyarrow = "^4.0.1" 
umap-learn = "^0.5.2"
umap = "^0.1.1"




[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
